[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inopyutils"
version = "1.7.11"
authors = [
    { name = "Inoland", email = "contact@inoland.net" },
]
description = "Async Python utility library for S3 storage, HTTP client, media/audio processing, JSON/CSV, MongoDB, file management, logging, and configuration"
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.9"
keywords = ["utilities", "s3", "async", "http", "media", "audio", "mongodb", "csv", "file-management", "logging", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pillow>=12.0.0",
    "pillow_heif>=1.1.1",
    "inocloudreve>=0.2.6",
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "botocore>=1.39.11",
    "boto3>=1.39.11",
    "motor>=3.7.1"
]

[tool.setuptools.packages.find]
where  = ["src"]
include = ["inopyutils*"]

[project.urls]
Homepage = "https://github.com/nobandegani/InoPyUtils"
Issues = "https://github.com/nobandegani/InoPyUtils/issues"